fixed background styles not showing on chrome

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,22 +23,9 @@ a {
   padding-top: 100px !important;
 }
 
-.company-button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: var(--mantine-radius-md);
-  height: rem(90px);
+.footer {
   background-color: light-dark(
-    var(--mantine-color-gray-3),
-    var(--mantine-color-dark-7)
+    var(--mantine-color-gray-1),
+    var(--mantine-color-dark-6)
   );
-  transition: box-shadow 150ms ease, transform 100ms ease;
-}
-
-.company-button:hover {
-  box-shadow: var(--mantine-shadow-md);
-  transform: scale(1.05);
 }
